Removed old versions, Changed build toolchain to gradle, renamed nms methods, fields and parameters to named mojang, implemented adventure support, updated readme